--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://yui.yahooapis.com/3.11.0/build/cssnormalize/cssnormalize-min.css"
+    />
     <title>Enviroportal</title>
   </head>
   <body>
